# brokerbrain

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
agents/: README.md  admin.md  calculators.md  channels.md  compliance.md  conversation.md  foundation.md  ocr.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
data/: ateco_coefficients.json  cadastral_codes.json
docs/: PRD_v1.5.md
scripts/: entrypoint.sh  setup_ollama.sh
src/: config.py  main.py
src/admin/: alerts.py  auth.py  bot.py  events.py  formatters.py  queries.py  web.py
src/calculators/: __init__.py  cdq.py  dti.py  income.py
src/channels/: telegram.py  whatsapp.py
src/conversation/: engine.py  fsm.py  states.py
src/db/: engine.py
src/decoders/: __init__.py  ateco.py  codice_fiscale.py
src/dossier/: __init__.py  builder.py  quotation.py
src/eligibility/: __init__.py  engine.py  products.py  rules.py  suggestions.py
src/llm/: client.py
src/models/: __init__.py  admin_access.py  appointment.py  audit.py  base.py  calculation.py  consent.py  deletion.py  document.py  enums.py  extracted_data.py  liability.py  message.py  operator.py  product_match.py  quotation.py  session.py  user.py
tests/: conftest.py  test_admin_bot.py  test_admin_web.py  test_ateco.py  test_ateco_decoder.py  test_cdq_calculator.py  test_cf_decoder.py  test_consent.py  test_dossier.py  test_dti_calculator.py  test_eligibility.py  test_encryption.py  test_erasure.py  test_income.py  test_income_calculator.py  test_ocr_pipeline.py  test_ocr_preprocessor.py  test_ocr_validators.py  test_piva_client.py  test_retention.py  test_scheduling.py  test_telegram_photo.py  test_whatsapp.py
(+64 files in other folders)
