[project]
name = "brokerbot"
version = "0.1.0"
description = "AI-powered lead qualification chatbot for ameconviene.it / Primo Network"
requires-python = ">=3.12"
authors = [
    {name = "Giuseppe Giordano"},
]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "jinja2>=3.1",
    "httpx>=0.28",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "redis>=5.2",

    # Telegram
    "python-telegram-bot>=21",

    # LLM (Ollama uses OpenAI-compatible API)
    "openai>=1.60",

    # Data validation
    "pydantic>=2.10",
    "pydantic-settings>=2.7",

    # Image processing (for OCR preprocessing)
    "Pillow>=11",

    # Security
    "cryptography>=44",
    "passlib[bcrypt]>=1.7",

    # Utilities
    "structlog>=24",
    "python-dateutil>=2.9",
    "openpyxl>=3.1",           # For reading eligibility rules from Excel

    # Scheduling
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "ruff>=0.8",
    "mypy>=1.14",
    "factory-boy>=3.3",        # Test fixtures
    "aiosqlite>=0.20",         # SQLite for fast tests
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
